--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
@@ -22,6 +23,8 @@
     "eslint-config-next": "15.0.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
