--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "trailingComma": "all",
   "singleQuote": true,
   "semi": true,
+  "tabWidth": 2,
+  "printWidth": 80,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
