--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "big.js": "^6.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-error-boundary": "^4.1.2",
     "sonner": "^1.7.0",
